--- a/example_data/metadata_nsALEX.yaml
+++ b/example_data/metadata_nsALEX.yaml
@@ -8,11 +8,12 @@ setup:
     num_polarization_ch: 1       # 1 = no polarization selection
     num_split_ch: 1              # 1 = no beam splitting
     modulated_excitation: True   # us-ALEX alternation requires True here
-    lifetime: False              # no TCSPC in detection
+    excitation_alternated: [True, True]   # True for each alternated laserline
+    lifetime: True               # no TCSPC in detection
 
     ## Optional fields
     excitation_wavelengths: [532e-9, 638E-9]  # List of excitation wavelenghts
-    excitation_cw: [True, True]               # List of booleans, True if wavelength is CW
+    excitation_cw: [False, False]             # List of booleans, True if wavelength is CW
     detection_wavelengths: [580e-9, 640e-9]   # Center wavelength for each for detection ch
 
 sample:
